syntax = "proto3";

import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "Protos/google/api/annotations.proto";

import "Protos/v1/user.proto";
import "Protos/v1/event.proto";

package protos.attendee.v1;

message Attendee {
  string id = 1;
  string admission_key = 2;
  protos.event.v1.EventSimple event = 3;
  protos.user.v1.User user = 4;
}

// Attendee service
service AttendeeService {
  // Get an attendees information for an event
  rpc GetAttendee (GetAttendeeRequest) returns (Attendee) {
    option (google.api.http) = {
      get: "/v1/attendees/{id}"
    };
  }
}

message GetAttendeeRequest {
  string id = 1;
}